--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <table width="100%" height="200">
         <tr>
             <td width="30%">
-                <center><img src="../SA-02/imagenes/logo.png" width="200px"></center>
+                <center><img src="imagenes/logo.png" width="200px"></center>
             </td>
             <td>
                 <center>
